--- a/simple-client-and-server/pom.xml
+++ b/simple-client-and-server/pom.xml
@@ -20,5 +20,9 @@
             <groupId>io.allune</groupId>
             <artifactId>quickfixj-spring-boot-starter</artifactId>
         </dependency>
+        <dependency>
+		    <groupId>org.quickfixj</groupId>
+		    <artifactId>quickfixj-messages-all</artifactId>
+		</dependency>
     </dependencies>
 </project>
